<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:id="@+id/constraint_agregar_nota"
    tools:context=".INICIO.NOTAS.AGREGAR_NOTA.fragment_agregar_nota">

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:textSize="14sp"
        android:textColorHint="#616161"
        android:textColor="#252525"
        android:fontFamily="@font/roboto"
        android:background="@drawable/background_et_inicio"
        android:hint="@string/titulo_nota"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="false"
        android:lineSpacingExtra="4dp"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:textColorHint="#616161"
        android:textColor="#252525"
        android:fontFamily="@font/roboto"
        android:background="@drawable/background_et_inicio"
        android:hint="@string/descripcion_nota"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/guardar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:fontFamily="@font/open_sans"
        android:background="@drawable/background_bt_inicio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_volver_atras"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/volver_atras"
        android:textAllCaps="false"
        android:textColor="#252525"
        android:fontFamily="@font/open_sans"
        android:background="@drawable/background_selector_gris"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_guardar"
        android:contentDescription="@string/app_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>