<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:id="@+id/constraint_inicio_sesion"
    tools:context=".iniciar_sesion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_programador"
        android:contentDescription="@string/app_name">

        <ImageView
            android:id="@+id/img_eldar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/img_eldar"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/txt_inicio_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio_de_sesion"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textColor="#252525"
            android:fontFamily="@font/roboto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_eldar"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:paddingLeft="45dp"
            android:paddingRight="5dp"
            android:background="@drawable/background_et_inicio"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:fontFamily="@font/roboto"
            android:textColor="#252525"
            android:textColorHint="#616161"
            android:textSize="14sp"
            android:hint="@string/nombre_de_usuario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_inicio_sesion"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/img_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_usuario"
            app:tint="#252525"
            app:layout_constraintLeft_toLeftOf="@+id/et_usuario"
            app:layout_constraintTop_toTopOf="@+id/et_usuario"
            app:layout_constraintBottom_toBottomOf="@+id/et_usuario"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:paddingLeft="45dp"
            android:paddingRight="5dp"
            android:background="@drawable/background_et_inicio"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:textColor="#252525"
            android:textColorHint="#616161"
            android:textSize="14sp"
            android:hint="@string/contrasena"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_usuario"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/img_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_contrasena"
            app:tint="#252525"
            app:layout_constraintLeft_toLeftOf="@+id/et_contrasena"
            app:layout_constraintTop_toTopOf="@+id/et_contrasena"
            app:layout_constraintBottom_toBottomOf="@+id/et_contrasena"
            android:contentDescription="@string/app_name"/>

        <Button
            android:id="@+id/bt_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/open_sans"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:background="@drawable/background_bt_inicio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_contrasena" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_programador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/programador"
        android:fontFamily="@font/open_sans"
        android:textColor="#616161"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/app_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>