<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".INICIO.CLIMA.clima">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name">

        <ImageButton
            android:id="@+id/imgbt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_back"
            android:background="?selectableItemBackgroundBorderless"
            android:tint="#000000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/clima"
            android:fontFamily="@font/roboto"
            app:layout_constraintLeft_toRightOf="@+id/imgbt_back"
            app:layout_constraintTop_toTopOf="@+id/imgbt_back"
            app:layout_constraintBottom_toBottomOf="@+id/imgbt_back"
            android:contentDescription="@string/app_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/temperatura"
        android:textColor="#252525"
        android:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_bar"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_temperatura1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#616161"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temperatura"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_temperatura_minima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/temperatura_minima"
        android:textColor="#252525"
        android:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temperatura1"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_temperatura_minima1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#616161"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temperatura_minima"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_temperatura_maxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/temperatura_maxima"
        android:textColor="#252525"
        android:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temperatura_minima1"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/txt_temperatura_maxima1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#616161"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temperatura_maxima"
        android:contentDescription="@string/app_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>